--- a/vite-react-app/index.html
+++ b/vite-react-app/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700,900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sanskari</title>
+    <title>Noor</title>
   </head>
   <body>
     <div id="root"></div>
